# HealthClawGuardrails

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  RELEASING.md  SECURITY.md  app.py  docker-compose.yml  gemini-extension.json  glama.json  main.py  pyproject.toml  server.json
adapters/: healthclaw_bridge.py  tools.manifest.json
docs/: ROADMAP.md  consumer-directory-submissions.md  dev-days-demo-runbook.md  development.md  ecosystem-contribution-plan.md  healthbankone-call-prep.md  hl7-sdc-feedback.md  mac-mini-setup.md  plugin-desktop-verification.md
openclaw/: bot.py
r6/: agent_client.py  context_builder.py  fhir_proxy.py  health_compliance.py  oauth.py  rate_limit.py  redaction.py  routes.py  seed.py  stepup.py  telegram_push.py
scripts/: benchmark_local_models.py  bot_commands.py  bot_commands_install.sh  convert_fasten.py  demo_telemetry.py  export_healthbankone_mcp.py  export_healthex.py  export_healthex_legacy.py  export_healthex_mcp.py  export_medent_fhir.py  healthbankone_oauth.py  healthclaw_redact.py  kristy_install.sh  kristy_schedule_watcher.py  medent_oauth.py  seed_openclaw_workspaces.sh  seed_quality_demo.py  seed_winters_demo.py  smoke_test.py  update_agent_prompts.sh
templates/: base.html  demo_intake_form.html  fasten_connect.html  fhir_control_panel.html  index.html  privacy.html  terms.html  wiki.html
tests/: conftest.py  test_actions_executors.py  test_actions_routes.py  test_adapters_bridge.py  test_command_center.py  test_context_builder.py  test_curatr.py  test_export_healthbankone.py  test_export_healthex.py  test_fhir_control_panel.py  test_fhir_proxy.py  test_gemini_extension.py  test_healthclaw_redact.py  test_import_healthex.py  test_kristy_watcher.py  test_labs_interpret.py  test_labs_report.py  test_medplum_in_front.py  test_metadata_security.py  test_quality_routes.py  test_quality_seed.py  test_r6_dashboard.py  test_r6_routes.py  (+19 more)
(+44 files in other folders)
