[project]
name = "healthclaw-guardrails"
version = "1.6.0"
description = "HealthClaw Guardrails — FHIR R4 US Core v9 + R6 MCP guardrail proxy (healthclaw.io)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "cryptography>=48.0.1",  # floor over GHSA-537c-gmf6-5ccf (OpenSSL-in-wheel); backs pyjwt token signing
    "email-validator>=2.2.0",
    "fhirpathpy>=2.2.1,<3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.27.0",
    "marshmallow>=3.26.1",
    "mcp>=1.2",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0",
    "reportlab>=4.0",
    "redis>=4.6.0",
    "requests>=2.33.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "reportlab>=4.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# E402: mid-file imports are the established register_*_routes pattern
# (see r6/routes.py blueprint wiring); keep the rest of pycodestyle+pyflakes.
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
# Deliberate one-line dispatcher idioms in deployed CLI scripts.
"scripts/bot_commands.py" = ["E701"]
"scripts/medent_oauth.py" = ["E701"]
